tests/paczka1/fuzzy1/85409782.err
Error in line 2: AUZQ66RnEX A153 56,5
Error in line 8: AUZQ66RnEX A801 59,71
Error in line 3: AUZQ66RnEX A801 81,9
Error in line 9: AUZQ66RnEX S418 47,6
Error in line 13: iENqm A801 96,7
Error in line 30: CR56Gg A153 83,77
